--- a/styles.css
+++ b/styles.css
@@ -114,7 +114,8 @@
   }
   .about-text span {
     color: var(--main-color);
-    font-weight: 500;
+    font-weight: 600;
+    font-size: x-large;
   }
   .about-text h2 {
     font-size: var(--h2-font);
@@ -127,7 +128,8 @@
   }
   .heading span {
     color: var(--main-color);
-    font-weight: 500;
+    font-weight: 600;
+    font-size: x-large;
   }
   .heading h2 {
     font-size: var(--h2-font);
@@ -206,7 +208,8 @@
   }
   .connect-text span {
     color: var(--main-color);
-    font-weight: 500;
+    font-weight: 600;
+    font-size: x-large;
   }
   .connect-text h2 {
     font-size: var(--h2-font);
